--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <h1>karan</h1>
 
-    <script src="Script.array_03.js"></script>
+    <script src="script_07object.js"></script>
+    
     
 </body>
 </html>
